src/Base/main/default/objects/Ecwid_API_Setting__mdt/Ecwid_API_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Ecwid API Setting</label>
    <pluralLabel>Ecwid API Settings</pluralLabel>
</CustomObject>