src/Base/main/default/objects/Ecwid_API_Setting__mdt/fields/Freight_Purolator_SKU__c.field-meta.xml
<CustomField>
    <fullName>Freight_Purolator_SKU__c</fullName>
    <label>Freight - Purolator SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>