src/Base/main/default/objects/Ecwid_API_Setting__mdt/fields/GLV1__c.field-meta.xml
<CustomField>
    <fullName>GLV1__c</fullName>
    <label>GLV1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>