src/Base/main/default/objects/Ecwid_API_Setting__mdt/fields/GLV2__c.field-meta.xml
<CustomField>
    <fullName>GLV2__c</fullName>
    <label>GLV2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>