src/Base/main/default/objects/Ecwid_API_Setting__mdt/fields/Price_Review_Notification_To__c.field-meta.xml
<CustomField>
    <fullName>Price_Review_Notification_To__c</fullName>
    <label>Price Review Notification To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>