src/Base/main/default/objects/Ecwid_API_Setting__mdt/fields/Verification_Key__c.field-meta.xml
<CustomField>
    <fullName>Verification_Key__c</fullName>
    <label>Verification Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>