src/Base/main/default/objects/Ecwid_API_Setting__mdt/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <label>Warehouse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>